<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01" android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >
        tools:context="com.pfp.parkhere.RegisterActivity">
        <ProgressBar
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:indeterminate="true"
            android:layout_centerInParent="true"
            android:id="@+id/registerLoad"/>
        <TextView android:id="@+id/RegistrationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:text="Registration"/>
        <EditText android:id="@+id/first_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_first_name"
            android:layout_below="@id/RegistrationTitle"
            android:inputType="textPersonName"/>
        <EditText android:id="@+id/last_name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_last_name"
            android:layout_below="@+id/first_name_field"
            android:inputType="textPersonName"/>
        <EditText android:id="@+id/email_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:layout_below="@+id/last_name_field"
            android:inputType="textEmailAddress" />
        <EditText android:id="@+id/phone_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone"
            android:layout_below="@+id/email_field"
            android:inputType="phone" />
        <EditText android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:layout_below="@+id/phone_field"
            android:inputType="textPassword"/>
        <EditText android:id="@+id/repeat_password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:layout_below="@+id/password_field"
            android:inputType="textPassword"/>
        <Spinner
            android:id="@+id/statusSpinner"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/repeat_password_field">
        </Spinner>
        <ImageView
            android:id="@+id/imgView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/repeat_password_field"/>
        <Button
            android:id="@+id/buttonLoadPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="Load Picture"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/imgView"/>
        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="confirmRegistration"
            android:layout_below="@+id/buttonLoadPicture"
            android:text="Confirm" />
        <Button
            android:id="@+id/goToLoginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/confirmButton"
            android:text="Go to Login"/>

    </RelativeLayout>
</ScrollView>